# ai_web_scraper

./: README.md  pyproject.toml
src/ai_web_scraper/: main.py  parse.py  scrape.py
